Fixed logo alignment

--- a/globalstyle.css
+++ b/globalstyle.css
@@ -46,7 +46,7 @@
 #logo{
     align-self: center;
     top: -25px;
-    left: calc(7.5vw - 55px);
+    left: calc(10vw - 55px);
     position: absolute;
 }
 
